pizza page completed

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza</title>
+    <title>Recipe</title>
 </head>
 <body>
-    <h1>PIZZA</h1>
-    <p><img src="../images/pizza.jpg"></p>
+    <h1> PIZZA </h1>
+    <img src="../images/pizzaaa.jpg">
     <p><h1>DESCRIPTION</h1></p>
-    <p>Pizza Neapolitan: [ˈpittsə]) is a dish of Italian origin consisting of a usually round, flat base of leavened wheat-based dough topped with tomatoes, cheese, and often various other ingredients (such as various types of sausage, anchovies, mushrooms, onions, olives, vegetables, meat, ham, etc.), which is then baked at a high temperature, traditionally in a wood-fired oven.[1]</p>
-    <p>The term pizza was first recorded in the 10th century in a Latin manuscript from the Southern Italian town of Gaeta in Lazio, on the border with Campania.[2] Raffaele Esposito is often credited for creating modern pizza in Naples.[3][4][5][6] In 2009, Neapolitan pizza was registered with the European Union as a Traditional Speciality Guaranteed dish. In 2017, the art of making Neapolitan pizza was added to UNESCO's list of intangible cultural heritage.[7]</p>
-
+    <P><h2>The term pizza was first recorded in the 10th century in a Latin manuscript from the Southern Italian town of Gaeta in Lazio, on the border with Campania.[2] Raffaele Esposito is often credited for creating modern pizza in Naples.[3][4][5][6] In 2009, Neapolitan pizza was registered with the European Union as a Traditional Speciality Guaranteed dish. In 2017, the art of making Neapolitan pizza was added to UNESCO's list of intangible cultural heritage.</h2></P>
+    <P><h2>Pizza and its variants are among the most popular foods in the world. Pizza is sold at a variety of restaurants, including pizzerias (pizza specialty restaurants), Mediterranean restaurants, via delivery, and as street food.[8] In Italy, pizza served in a restaurant is presented unsliced, and is eaten with the use of a knife and fork.[9][10] In casual settings, however, it is cut into wedges to be eaten while held in the hand. Pizza is also sold in grocery stores in a variety of forms, including frozen or as kits for self-assembly. They are then cooked using a home oven.</h2></P>
+    <p><h1>INGREDIENTS</h1></p>
+    <p><h2><ul><li>fennel seeds</li><li>ghee (clarified butter)</li> <li>nutmeg</li><li>pepper</li> <li>cloves</li> <li>cardamom</li><li>cinnamon</li><li>coriander</li> <li>mint</li><li>ginger</li><li>onions</li><li>tomatoes</li><li>green chilies</li><li>garlic</li></ul></h2></p>
+    <p><h1>MAKING STEPS :</h1></p>
+    <p><h2><ol><li>To make the brown onions, pat the onions dry and if time permits, leave them out on a kitchen towel for 15-20 minutes to dry them out slightly. Heat oil in a pan and add the onions. On a medium flame, shallow fry the onions for 15 minutes till they are a deep golden brown, without burning them. Drain them out on a paper towel, and set aside. These can be made ahead and stored in an air tight container overnight. Burnt onions will add a bitter flavor to the biryani. You can also use store bought fried onions/ shallots which are easily available in leading supermarkets, Indian and Asian stores</li><li>Mix together all the ingredients under chicken marinade and marinate for at least two hours or overnight for best results</li><li>When you are ready to make the biryani, soak saffron strands in hot milk and rub them slightly with the back of a spoon. Set this aside.</li><li>Bring water to a roaring boil and add salt, whole spices and basmati rice. Cook for exactly 5 minutes and drain completely, leaving the whole spices in the rice. This will cook the rice to about 70% doneness which can be checked by pressing a grain of rice between two fingers - the rice should still be raw in the middle.</li><li>Layering and Cooking Chicken Biryani: 
+        Heat a heavy bottomed pot like a dutch oven, and add the chicken to it. Cook for 4 minutes and then turn the chicken pieces once. Cover and cook for another 3 minutes. Turn off the heat. Scatter half the onions all over the chicken, and then sprinkle all the coriander and mint leaves. Next layer the rice all over the mint and coriander, and in the end drizzle saffron milk and ghee all over the rice. Cover and cook on a low flame for 20 minutes - this will help steam the rice, cook it to doneness and cook the chicken. (Note 4)</li><li>Once the biryani is cooked, let it rest for 5-10 minutes, and finish by scattering the remaining onions on top. Serve hot digging the spoon deep to get all the layers.</li></ol></h2></p>
 </body>
 </html>
