--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Project</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><ul><li><a href="recipes/biriyani.html"><h3>Biriyani</h3></a></li></ul></p>
+    <h1>ODIN RECIPES</h1>
+    <p><img src="images/intro_img.gif"></p>
+    <p><ul><li><a href="recipes/biriyani.html" target="_blank" rel="noopener noreferrer"><h3>Biriyani</h3></a></li></ul></p>
     <p><ul><li><a href="recipes/pizza.html"><h3>Pizza</h3></a></li></ul></p>
 </html>
