changed the style of the main page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Project</title>
 </head>
 <body>
-    <h1>ODIN RECIPES</h1>
-    <p><img src="images/intro_img.gif"></p>
-    <p><ul><li><a href="recipes/biriyani.html" target="_blank" rel="noopener noreferrer"><h3>Biriyani</h3></a></li></ul></p>
-    <p><ul><li><a href="recipes/pizza.html"><h3>Pizza</h3></a></li></ul></p>
+    <p><font size="+8"><h1><center>ODIN RECIPES</center></h1></font></p>
+    <p><center><img src="images/intro_img.gif" style="width: 700px;height: 500px;"></center></p>
+    <p><font size="+7"><h1>Favourite Foods :)</h1></font></p>
+    <p><font size="+2"><h3>Lets dig into some of my favourite dishes !!</h3></font></p>
+    <p><font size="+3"><ul><li><a href="recipes/biriyani.html" target="_blank" rel="noopener noreferrer"><h3>BIRIYANI</h3></a></li></ul></font></p>
+    <p><font size="+3"><ul><li><a href="" target="_blank" rel="noopener noreferrer"><H3>BUTTER CHICKEN</H3></a></li></ul></font></p>
+    <p><font size="+3"><ul><li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer"><h3>PIZZA</h3></a></li></ul></font></p>
 </html>
