--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -4,17 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
+    <link rel="stylesheet" href="../design.css">
 </head>
 <body style="background-color: blanchedalmond;">
-    <p><font size="+2"><a href="../index.html" target="_blank" rel="noopener noreferrer">HOME</a></font></p>
-    <p><center><font size="+6"><strong>BIRIYANI</strong></font></center></p>
-    <p><center><img src="../images/biryani_img.jpg" alt="image of butter chicken dish"></center></p>
-    <p><font size="+5">DESCRIPTION :</font></p>
-    <p><font size="+2">Biryani, a tantalizing and aromatic dish, is a culinary masterpiece that has captured the hearts and palates of people across South Asia and beyond. It's a beloved one-pot meal known for its exquisite blend of flavors and fragrant spices. Biryani typically features long-grain Basmati rice that is parboiled and then layered with succulent pieces of meat (such as chicken, mutton, or goat) or vegetables. What truly sets biryani apart is its complexity, achieved through the careful infusion of a multitude of spices like cumin, cardamom, cinnamon, cloves, and saffron.</font></p>
-    <p><font size="+2">The layers of rice and meat or vegetables are slow-cooked to perfection, allowing the flavors to meld together, resulting in a dish that's rich, aromatic, and bursting with taste. Depending on regional variations, biryani can be cooked in various styles, including the Hyderabadi, Lucknowi, or Kolkata styles, each with its unique combination of spices and cooking techniques. Biryani is often garnished with fried onions, fresh coriander, and mint leaves, adding a refreshing contrast to the richness of the dish. This iconic culinary treasure is more than just a meal; it's an experience, a celebration of culture, and a testament to the artistry of blending spices and ingredients to create an unforgettable feast.</font></p>
-    <p><font size="+5">INGREDIENTS :</font></p>
-    <p><font size="+2"><ul><li>Basmati rice</li><li>Chicken</li><li>Yogurt</li><li>Ginger-Garlic-Paste</li><li>Spices</li><li>Fresh Herbs</li><li>Vegetables</li><li>Cooking Oil</li><li>Fried Onions</li><li>Nuts and Raisins</li></ul></font></p>
-    <p><font size="+5">PREPARATIONS STEPS :</font></p>
-    <p><font size="+2"><ol><li>In a mixing bowl, combine the chicken pieces, yogurt, ginger-garlic paste, and a blend of spices (garam masala, turmeric, cumin, coriander, and chili powder). Mix well, ensuring the chicken is evenly coated. Marinate for at least 30 minutes, but longer marination is better for deeper flavor.</li><li> Wash the Basmati rice thoroughly until the water runs clear. Drain the rice.In a large pot, bring water to a boil. Add salt.Add the drained rice to the boiling water and cook until it's about 70-80% cooked (still slightly firm to the bite). Drain the rice and set it aside.</li>In the same pan, layer the partially cooked rice on top of the chicken.Sprinkle fresh coriander and mint leaves, saffron soaked in milk (for color and flavor), fried onions, and any optional ingredients (nuts, raisins, and hard-boiled eggs) over the rice.<li>Cover the pan with a tight-fitting lid or seal it with dough to create a steam-tight seal. Adding...</li><li>Once done, gently fluff the biryani with a fork, mixing the layers.</li><li>Serve the chicken biryani hot, garnished with more fresh coriander and mint leaves, and enjoy!</li></ol></font></p>
+    <button><a href="../index.html" target="_blank" rel="noopener noreferrer">HOME</a></button>
+    <div id="title">BIRIYANI</div>
+    <p id="image">
+        <img src="../images/biryani_img.jpg" alt="image of butter chicken dish">
+    </p>
+    <div>DESCRIPTION :</div>
+    <p>Biryani, a tantalizing and aromatic dish, is a culinary masterpiece that has captured the hearts and palates of people across South Asia and beyond. It's a beloved one-pot meal known for its exquisite blend of flavors and fragrant spices. Biryani typically features long-grain Basmati rice that is parboiled and then layered with succulent pieces of meat (such as chicken, mutton, or goat) or vegetables. What truly sets biryani apart is its complexity, achieved through the careful infusion of a multitude of spices like cumin, cardamom, cinnamon, cloves, and saffron.</p>
+    <p>The layers of rice and meat or vegetables are slow-cooked to perfection, allowing the flavors to meld together, resulting in a dish that's rich, aromatic, and bursting with taste. Depending on regional variations, biryani can be cooked in various styles, including the Hyderabadi, Lucknowi, or Kolkata styles, each with its unique combination of spices and cooking techniques. Biryani is often garnished with fried onions, fresh coriander, and mint leaves, adding a refreshing contrast to the richness of the dish. This iconic culinary treasure is more than just a meal; it's an experience, a celebration of culture, and a testament to the artistry of blending spices and ingredients to create an unforgettable feast.</p>
+    <div>INGREDIENTS :</div>
+    <p>
+        <ul>
+            <li>Basmati rice</li>
+            <li>Chicken</li>
+            <li>Yogurt</li>
+            <li>Ginger-Garlic-Paste</li>
+            <li>Spices</li>
+            <li>Fresh Herbs</li>
+            <li>Vegetables</li>
+            <li>Cooking Oil</li>
+            <li>Fried Onions</li>
+            <li>Nuts and Raisins</li>
+        </ul>
+    </p>
+    <div>PREPARATIONS STEPS :</div>
+    <p>
+        <ol>
+            <li>In a mixing bowl, combine the chicken pieces, yogurt, ginger-garlic paste, and a blend of spices (garam masala, turmeric, cumin, coriander, and chili powder). Mix well, ensuring the chicken is evenly coated. Marinate for at least 30 minutes, but longer marination is better for deeper flavor.</li>
+            <li> Wash the Basmati rice thoroughly until the water runs clear. Drain the rice.In a large pot, bring water to a boil. Add salt.Add the drained rice to the boiling water and cook until it's about 70-80% cooked (still slightly firm to the bite). Drain the rice and set it aside.</li>
+            <li>In the same pan, layer the partially cooked rice on top of the chicken.Sprinkle fresh coriander and mint leaves, saffron soaked in milk (for color and flavor), fried onions, and any optional ingredients (nuts, raisins, and hard-boiled eggs) over the rice.</li>
+            <li>Cover the pan with a tight-fitting lid or seal it with dough to create a steam-tight seal. Adding...</li>
+            <li>Once done, gently fluff the biryani with a fork, mixing the layers.</li>
+            <li>Serve the chicken biryani hot, garnished with more fresh coriander and mint leaves, and enjoy!</li>
+        </ol>
+    </p>
 </body>
 </html>
