--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="../design.css">
 </head>
 <body style="background-color: blanchedalmond;">
-    <button><a href="../index.html" target="_blank" rel="noopener noreferrer">HOME</a></button>
-    <div id="title">BIRIYANI</div>
+    <p>
+        <button>
+            <a href="../index.html" target="_blank" rel="noopener noreferrer">HOME</a>
+        </button>
+    </p>    
+    <div class="title">BIRIYANI</div>
     <p id="image">
         <img src="../images/biryani_img.jpg" alt="image of butter chicken dish">
     </p>
