designing of the 3 recipe pages is completed ...

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -6,7 +6,7 @@
     <title>Recipe</title>
     <link rel="stylesheet" href="../design.css">
 </head>
-<body class="bir" style="background-color: blanchedalmond;">
+<body class="back" >
     <p>
         <button>
             <a href="../index.html" target="_blank" rel="noopener noreferrer">HOME</a>
