--- a/recipes/butterchicken.html
+++ b/recipes/butterchicken.html
@@ -6,7 +6,7 @@
     <title>Butterchicken</title>
     <link rel="stylesheet" href="../design.css">
 </head>
-<body class="but">
+<body class="back">
     <p>
         <button>
             <a href="../index.html" target="_blank" rel="noopener noreferrer">HOME</a>
@@ -41,7 +41,7 @@
         </ul>
     </p>
     
-    <div>PREPARATIONS STEPS :</font></div>
+    <div>PREPARATIONS STEPS :</div>
     
     <p>
         <ol>
