made design changes in the main page too ...

--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
+    <link rel="stylesheet" href="ind_design.css">
 </head>
-<body style="background-color: rgb(255, 204, 127);">
-    <p><font size="+8"><center>ODIN RECIPES</center></font></p>
-    <p><center><img src="images/intro_img.gif" style="width: 700px;height: 500px;"></center></p>
-    <!--<p><font size="+7">FAVOURITE FOODS :)</font></p>
-    <p><font size="+2">-> Lets dig into some of my favourite dishes !!</font></p>-->
-    <p><font size="+3"><ul><li><a href="recipes/biriyani.html" target="_blank" rel="noopener noreferrer"><h3>BIRIYANI</h3></a></li></ul></font></p>
-    <p><font size="+3"><ul><li><a href="recipes/butterchicken.html" target="_blank" rel="noopener noreferrer"><H3>BUTTER CHICKEN</H3></a></li></ul></font></p>
-    <p><font size="+3"><ul><li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer"><h3>PIZZA</h3></a></li></ul></font></p>
+<body class="back">
+    <div id="title">ODIN RECIPES</div>
+    <p>
+        <img id="image" src="images/intro_img.gif">
+    </p>
+    <div>
+        <ul>
+            <li>
+                <button >
+                    <a href="recipes/biriyani.html" target="_blank" rel="noopener noreferrer">BIRIYANI</a>
+                </button>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>
+                <button>
+                    <a href="recipes/butterchicken.html" target="_blank" rel="noopener noreferrer">BUTTER CHICKEN</a>
+                </button>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>
+                <button>
+                    <a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">PIZZA</a>
+                </button>
+            </li>
+        </ul>
+    </div>
 </html>
